--- a/package.json
+++ b/package.json
@@ -4,22 +4,35 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/plots": "^2.3.3",
+    "@dnd-kit/core": "^6.3.1",
+    "@refinedev/antd": "^5.44.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
     "@refinedev/kbar": "^1.3.6",
+    "@refinedev/nestjs-query": "^1.1.1",
+    "@refinedev/react-router": "^1.0.0",
+    "@uiw/react-md-editor": "^4.0.5",
+    "antd": "^5.17.0",
+    "dayjs": "^1.11.13",
+    "graphql": "^16.10.0",
+    "graphql-config": "^5.1.3",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^6.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.0.2",
-    "@refinedev/nestjs-query": "^1.1.1",
-    "graphql-tag": "^2.12.6",
-    "graphql-ws": "^5.9.1",
-    "@refinedev/antd": "^5.44.0",
-    "antd": "^5.17.0",
-    "@ant-design/icons": "^5.5.1",
-    "@refinedev/react-router": "^1.0.0"
+    "react-router-dom": "^7.1.5"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.4",
+    "@graphql-codegen/import-types-preset": "^3.0.0",
+    "@graphql-codegen/typescript": "^4.1.3",
+    "@graphql-codegen/typescript-operations": "^4.4.1",
+    "@graphql-codegen/typescript-react-query": "^6.1.0",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^18.16.2",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -29,12 +42,10 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.4.2",
+    "prettier": "^3.5.0",
+    "typescript": "^5.7.3",
     "vite": "^4.3.1",
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/import-types-preset": "^3.0.0"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "scripts": {
     "dev": "refine dev",
@@ -57,5 +68,8 @@
   },
   "refine": {
     "projectId": "IjN4DL-k3exF0-s0sSKU"
+  },
+  "resolutions": {
+    "graphql": "16.10.0"
   }
 }
